fix bugs with grocery list.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.js"
     integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
     crossorigin="anonymous"></script>
-    <script src="js/scipts.js"></script>
+    <script src="js/scripts.js"></script>
     <title>Grocery List</title>
   </head>
   <body>
@@ -15,23 +15,23 @@
          <div id="blanks">
            <form>
              <div class="form-group">
-               <label for="Item_1">Item 1</label>
+               <label for="item1">Item 1</label>
                <input id="item1" class="form-control" type="text">
              </div>
              <div class="form-group">
-               <label for="Item_2">Item 2</label>
+               <label for="item2">Item 2</label>
                <input id="item2" class="form-control" type="text">
              </div>
              <div class="form-group">
-               <label for="Item_3">Item 3</label>
+               <label for="item3">Item 3</label>
                <input id="item3" class="form-control" type="text">
              </div>
              <div class="form-group">
-               <label for="Item_4">Item 4</label>
+               <label for="item4">Item 4</label>
                <input id="item4" class="form-control" type="text">
              </div>
              <div class="form-group">
-               <label for="Item_5">Item 5</label>
+               <label for="item5">Item 5</label>
                <input id="item5" class="form-control" type="text">
              </div>
 
@@ -42,11 +42,11 @@
          <div id="list">
            <h1>The List</h1>
            <ul>
-             <li><span class="Item_1"></span></li>
-             <li><span class="Item_2"></span></li>
-             <li><span class="Item_3"></span></li>
-             <li><span class="Item_4"></span></li>
-             <li><span class="Item_5"></span></li>
+             <li><span class="item1"></span></li>
+             <li><span class="item2"></span></li>
+             <li><span class="item3"></span></li>
+             <li><span class="item4"></span></li>
+             <li><span class="item5"></span></li>
            </ul>
          </div>
        </div>
